alignment fix

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@
 
 .container {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   background-color: #fff;
@@ -20,31 +22,21 @@
 .about-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-self: center;
-  text-align: center;
-  margin: auto;
+  height: 200px;
   max-width: 800px;
-  height: 170px;
-}
-
-.name-container {
-  font-size: 80px;
-  letter-spacing: -2px;
-  font-weight: 500;
-  line-height: 70px;
+  text-align: center;
 }
 
 .name {
+  font-size: 80px;
+  letter-spacing: -2px;
+  font-weight: 500;
   color: #2e2e2e;
 }
 
 .title {
-  text-align: center;
-}
-
-.webdev {
   font-size: 30px;
+  max-height: 60px;
   color: #ff0078;
   font-weight: 100;
 }
@@ -52,6 +44,7 @@
 .icons {
   display: flex;
   justify-content: center;
+  padding: 10px;
 }
 
 a {
